添加koa-body中间件处理post数据

--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "author": "liyaocool",
   "license": "ISC",
   "dependencies": {
-    "koa": "^2.7.0"
+    "koa": "^2.7.0",
+    "koa-body": "^4.1.0",
+    "koa-router": "^7.4.0"
   }
 }
